--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
+    "bootstrap-icons": "^1.8.1",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
